# DBSAnnotator

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  annotator_utils.py  constraints-briefcase.txt  main.py  pyproject.toml  run.py  style.qss
.github/: dependabot.yml
.github/workflows/: ci.yml  package-briefcase.yml  prepare-release.yml  release-drafter.yml  release.yml
config/: clinical_presets.json  session_scales_presets.json
docs/: conf.py  contributing.rst  faq.rst  index.rst  quickstart.rst  releasing.rst  requirements.txt
newsfragments/: 55.docs.md  63.changed.md
scripts/: ClinicalDBSAnnotator.iss  build_macos copy.py  build_macos.py  build_quick.py  build_windows.py  build_windows_nuitka.py  generate_iss.py  make_macOS_logo.sh  release_prepare.py
scripts/installer/: ClinicalDBSAnnot.iss
src/clinical_dbs_annotator/: __init__.py  __main__.py  config.py  config_electrode_models.py
src/clinical_dbs_annotator/config/: clinical_presets.json
src/clinical_dbs_annotator/controllers/: wizard_controller.py
src/clinical_dbs_annotator/models/: __init__.py  clinical_scale.py  electrode_viewer.py  session_data.py  (+1 more)
src/dbs_annotator/: logging_config.py  version.py
styles/: dark_theme.qss  light_theme.qss
tests/: README.md
tests/integration/: test_export_integration.py  test_full_workflow.py
tests/performance/: test_export_performance.py
tests/unit/: test_bids_naming.py  test_models.py  test_resources.py  test_session_data.py  test_session_exporter.py  test_utils.py  test_views_basic.py  test_wizard_controller.py
(+31 files in other folders)
